# AI-Guardian

./: .coverage  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
ai_guardian/: __init__.py  config.py  connection.py  doctor.py  runtimes.py  scanner.py  secretstore.py  usage.py
ai_guardian/cli/: __init__.py  _common.py  _root.py  doctor.py  guard.py  init.py  model.py  overview.py  secret.py  undo.py
ai_guardian/governance/: __init__.py  audit.py  budget.py  decorators.py  paths.py  patterns.py  policy.py  readonly.py  sanitize.py  undo.py
ai_guardian/ops/: __init__.py  _util.py  models.py  observe.py  openai_compat.py  overview.py  policy.py
docs/: VERIFICATION.md
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: models.py  observe.py  policy.py  undo.py
skills/ai-guardian/: SKILL.md
skills/ai-guardian/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: conftest.py  test_cli_writes.py  test_config_policy.py  test_connection_transport.py  test_doctor.py  test_gov_audit.py  test_gov_decorators.py  test_gov_patterns.py  test_gov_policy.py  test_governance_persistence.py  test_init.py  test_mcp_tool_helpers.py  test_openai_compat_edges.py  test_ops_native.py  test_ops_policy.py  test_optional_fields.py  test_readonly.py  test_runtimes.py  test_scanner_detections.py  test_secretstore.py  test_smoke.py  test_undo_executor.py  test_undo_honesty.py  test_usage_store.py
